--- a/final-vite-project/src/components/header/Header.module.css
+++ b/final-vite-project/src/components/header/Header.module.css
@@ -19,6 +19,7 @@
 .headerOpenSvg:hover {
     background-color: #1677ff;
     cursor: pointer;
+    border-radius: 20px 20px 20px 20px;
 }
 
 .headerBasketSvg {
@@ -32,4 +33,5 @@
 .headerBasketSvg:hover {
     background-color: #1677ff;
     cursor: pointer;
+    border-radius: 20px 20px 20px 20px;
 }
