--- a/final-vite-project/src/components/header/header.scss
+++ b/final-vite-project/src/components/header/header.scss
@@ -1,12 +1,10 @@
 .headerDiv {
     width: 100%;
-    max-width: 1200px;
     display: flex;
     justify-content: center;
     flex-direction: row;
     gap: 25px;
     padding-top: 8px;
-    padding-left: 15%;
 }
 
 .headerOpenSvg {
@@ -26,7 +24,7 @@
     width: 35px;
     height: 35px;
     margin-top: 5px;
-    padding-left:5px ;
+    padding-left: 5px;
     background-image: url(./static/picture/basket.svg);
     background-repeat: no-repeat;
 
@@ -34,5 +32,83 @@
         background-color: #1677ff;
         cursor: pointer;
         border-radius: 30px;
+    }
+}
+
+@media(min-width: 778px) {
+    .mobile {
+        display: none;
+    }
+}
+
+@media(max-width: 777px) {
+
+    .headerOpenSvg,
+    .headerBasketSvg {
+        display: none;
+    }
+
+    .mobile {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-left: 10px;
+
+        .mobileOpen,
+        .mobileBasket {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            font-size: 24px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #1677ff;
+                border-radius: 50%;
+                color: white;
+            }
+        }
+    }
+}
+
+@media(max-width: 667px) {
+    .mobile {
+        gap: 10px;
+
+        .mobileOpen,
+        .mobileBasket {
+            width: 35px;
+            height: 35px;
+            font-size: 20px;
+        }
+    }
+}
+
+@media(max-width: 523px) {
+    .mobile {
+        gap: 8px;
+
+        .mobileOpen,
+        .mobileBasket {
+            width: 30px;
+            height: 30px;
+            font-size: 18px;
+        }
+    }
+}
+
+@media(max-width: 480px) {
+    .mobile {
+        gap: 6px;
+        margin-left: 5px;
+
+        .mobileOpen,
+        .mobileBasket {
+            width: 28px;
+            height: 28px;
+            font-size: 16px;
+        }
     }
 }
