TASK_1 адаптация доделал

--- a/final-vite-project/src/components/ui/button/catalog/catalog.scss
+++ b/final-vite-project/src/components/ui/button/catalog/catalog.scss
@@ -36,7 +36,8 @@
 @media(max-width: 480px) {
     .catalogBtn {
         width: 45px;
-        height: 22px;
+        height: 27px;
         font-size: 9px;
+        margin-top: 1px;
     }
 }
