--- a/final-vite-project/src/components/header/header.scss
+++ b/final-vite-project/src/components/header/header.scss
@@ -12,7 +12,9 @@
     background-repeat: no-repeat;
     width: 40px;
     height: 40px;
-
+    background-position: center;
+    background-size: 33px;
+    margin-top: 3px;
     &:hover {
         background-color: #1677ff;
         cursor: pointer;
@@ -27,7 +29,8 @@
     padding-left: 5px;
     background-image: url(./static/picture/basket.svg);
     background-repeat: no-repeat;
-
+    background-position: center;
+    background-size: 30px;
     &:hover {
         background-color: #1677ff;
         cursor: pointer;
