--- a/final-vite-project/src/components/formRegistration/formRegistration.scss
+++ b/final-vite-project/src/components/formRegistration/formRegistration.scss
@@ -1,4 +1,4 @@
-.mainForm {
+.formRegistration {
     display: flex;
     flex-direction: column;
     gap: 16px;
@@ -11,7 +11,7 @@
         font-size: 24px;
     }
 
-    .btnForm {
+    .btnRegistForm {
         display: flex;
         justify-content: space-between;
         gap: 12px;
