--- a/final-vite-project/src/components/logModal/logModal.scss
+++ b/final-vite-project/src/components/logModal/logModal.scss
@@ -18,14 +18,13 @@
         width: 500px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 12px;
-        padding: 16px;
+        gap: 16px;
+        padding: 24px;
         background: #ffffff;
         border-radius: 8px;
         position: relative;
     }
+
     .modalBtn {
         position: absolute;
         top: 20px;
@@ -35,11 +34,10 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
-        z-index: 1001; // Убедимся, что кнопка выше модального контента
+        z-index: 1001;
         
         &:hover {
             background: #e0e0e0;
         }
     }
-      
 }
