--- a/final-vite-project/src/components/formOpAccunt/FormOpAccunt.scss
+++ b/final-vite-project/src/components/formOpAccunt/FormOpAccunt.scss
@@ -18,3 +18,23 @@
         margin-top: 16px;
     }
 }
+
+@media (max-width: 775px) {
+    .mainForm {
+        gap: 12px;
+        
+        h2 {
+            font-size: 20px;
+            margin-bottom: 12px;
+        }
+        
+        .btnForm {
+            flex-direction: column;
+            gap: 10px;
+            
+            button {
+                width: 100%;
+            }
+        }
+    }
+}
